--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.1",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.62",
+    "@types/node": "^12.12.14",
+    "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "typescript": "^3.7.5"
+    "@types/react-dom": "^16.9.4",
+    "emotion": "^10.0.27",
+    "graphql": "^15.3.0",
+    "polish": "^0.2.3",
+    "polished": "^3.6.7",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-emotion": "^9.2.12",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codegen": "./node_modules/apollo/bin/run client:codegen --target typescript --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "apollo": "^2.31.0"
   }
 }
